--- a/src/App.scss
+++ b/src/App.scss
@@ -130,3 +130,12 @@ body {
     }
   }
 }
+.project-title {
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  text-transform: uppercase;
+  font-size: 2rem;
+  font-weight: 800;
+  color: white;
+}
