--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,13 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  background: linear-gradient(to bottom left, #fff3da, #dfccfb, #d0bfff, #beadfa);
+  background: linear-gradient(
+    to bottom left,
+    #fff3da,
+    #dfccfb,
+    #d0bfff,
+    #beadfa
+  );
 }
 .card-list {
   width: 100%;
@@ -97,7 +103,8 @@ body {
             transition: rotate 0.4s cubic-bezier(0.17, 0.67, 0.38, 0.94);
           }
         }
-        transition: scale 0.2s ease, rotate 0.4s cubic-bezier(0.17, 0.67, 0.38, 0.94);
+        transition: scale 0.2s ease,
+          rotate 0.4s cubic-bezier(0.17, 0.67, 0.38, 0.94);
         &:hover {
           scale: 1.1;
           rotate: 360deg;
